# thrifty

./: .gitignore  README.md  application fullstack structure.drawio  data.sqlite  procedure flowchart.drawio
backend/: .gitignore  app.py  main.py  pyproject.toml
backend/db/: core.py  models.py
backend/routes/: auth.py  dependencies.py  expenses.py  settings.py
backend/utils/: exceptions.py  prod.py  time.py
docs/: application fullstack structure.drawio  database.drawio  database.md  procedure flowchart.drawio  program_flow.drawio  use_case.drawio
web/: .eslintrc.json  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
web/functions/api/: [[path]].js
web/patches/: @smui+tab-bar+6.1.0.patch
web/public/: fonts.css  smui-dark.css  smui.css
web/src/: App.svelte  app.css  stores.js
web/src/data/: categories.json
web/src/lib/: Counter.svelte  DatePicker.svelte  Expense.svelte  FastAPI.svelte  Logo.svelte  backend.js  date.js  expenses.json  hacks.js
web/src/lib/charts/: CategoryChart.svelte  Chart.svelte  ChartSettings.svelte  category.js  stores.js  summary.js
web/src/pages/: AddExpenses.svelte  ExpensesDialog.svelte  Homepage.svelte  LandingPage.svelte  LoginForm.svelte  RegisterForm.svelte
web/src/pages/credentials/: CredentialsForm.svelte  LoginForm.svelte  RegisterForm.svelte
web/src/pages/dashboard/: Dashboard.svelte  ExpenseHistory.svelte  ExpensesDialog.svelte  Homepage.svelte  TargetDialog.svelte  stores.js
web/src/pages/landing/: Landing.svelte
web/src/theme/: _smui-theme.scss
(+4 files in other folders)
